package iterator

type user struct {
	name string
	age  int
}
